--- a/www/_themes/propio/partials/footer.html
+++ b/www/_themes/propio/partials/footer.html
@@ -1,16 +1,6 @@
 <footer role="contentinfo">
 	<div class="wrapper">
-    <div class="social-icons">
-      <a href="#">
-        <span class="icon icon-facebook"></span>
-      </a>
-      <a href="#">
-        <span class="icon icon-twitter"></span>
-      </a>
-      <a href="#">
-        <span class="icon icon-googleplus"></span>
-      </a>
-    </div>
+    <p>Redes de poder: España y el mundo atlántico</p>
     <div class="sub-footer">
       <p>&copy 2014</p>
     </div>
