--- a/www/_themes/propio/partials/footer.html
+++ b/www/_themes/propio/partials/footer.html
@@ -1,8 +1,8 @@
 <footer role="contentinfo">
 	<div class="wrapper">
-    <p>Redes de poder: España y el mundo atlántico</p>
+    <p>Redes de poder: España y el mundo atlántico.</p>
     <div class="sub-footer">
-      <p>&copy 2014</p>
+      <p>Universidad Autónoma de Madrid &copy 2014</p>
     </div>
 	</div>
 </footer>
