--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -59,7 +59,7 @@ debug information
 					<div class="big-image">
 						<div class="mask">
 							<div class="title"><a href="{{ homepage }}">{{ _site_name}}</a>
-								<span class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus in doloremque ad, cum nesciunt. Asperiores placeat et, </span>
+								<span class="subtitle">Proyecto de investigación de I+D <em>La construcción de las redes de poder en la España contemporánea y sus relaciones con el mundo atlántico (s. XIX-XX) </em>. Universidad Autónoma de Madrid</span>
 							</div>
 						</div>
 				{{ theme:partial src="nav" }}
