--- a/www/_themes/propio/partials/footer.html
+++ b/www/_themes/propio/partials/footer.html
@@ -1,6 +1,6 @@
 <footer role="contentinfo">
 	<div class="wrapper">
-    <p>Redes de poder: España y el mundo atlántico.</p>
+    <p>La construcción de las redes de poder en la España contemporánea y sus relaciones con el mundo atlántico (s. XIX-XX) </p>
     <div class="sub-footer">
       <p>Universidad Autónoma de Madrid &copy 2014</p>
     </div>
