--- a/www/_themes/propio/templates/about.html
+++ b/www/_themes/propio/templates/about.html
@@ -1,7 +1,7 @@
 
 <div class="main-content">
   <div class="big-inner-wrapper">
-    <h1 class="big-heading">Sobre el grupo de investigación</h1>
+    <h1 class="big-heading">Sobre el proyecto</h1>
     <div class="divider"></div>
     <p class="big-p">
     	{{content}}
