--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -57,9 +57,28 @@ debug information
 				</div>
 				<div class="hero">
           <div id="owl-demo" class="owl-carousel owl-theme">
-            <div class="item"><img src="/_themes/propio/img/paris.jpg" alt="image 1"></div>
-            <div class="item"><img src="/_themes/propio/img/paris2.jpg" alt="image 1"></div>
-            <div class="item"><img src="/_themes/propio/img/sanfrancisco.jpg" alt="image 1"></div>
+            <div class="item">
+            	<div class="img-1">
+            		<p>Redes de poder.España y el mundo atlántico.
+            			<span>Proyecto de investigación de I+D La construcción de las redes de poder en la España contemporánea y sus relaciones con el mundo atlántico (s. XIX-XX) . Universidad Autónoma de Madrid</span>
+            		</p>
+            	</div>
+            </div>
+            <div class="item">
+            	<div class="img-2">
+            		<p>Redes de poder.España y el mundo atlántico.</p>
+            	</div>
+            </div>
+            <div class="item">
+            	<div class="img-3">
+            		<p>Redes de poder.España y el mundo atlántico.</p>
+            	</div>
+            </div>
+            <div class="item">
+            	<div class="img-4">
+            		<p>Redes de poder.España y el mundo atlántico.</p>
+            	</div>
+            </div>
           </div>
         </div>
         {{ theme:partial src="nav" }}
