--- a/www/_themes/propio/templates/lectures.html
+++ b/www/_themes/propio/templates/lectures.html
@@ -1,10 +1,10 @@
 
 <div class="main-content">
-	<div class="big-inner-wrapper">
-		<h1 class="big-heading">{{ title }}</h1>
+  <div class="big-inner-wrapper">
+    <h1 class="big-heading">{{ title }}</h1>
     <div class="divider nm"></div>
-		<article>
-      {{ entries:listing folder="novedades" limit="6" sort_dir="desc" paginate="true" }}
+    <article>
+      {{ entries:listing folder="ponencias" limit="6" sort_dir="desc" paginate="true" }}
         <div class="new-box">
           {{ if image }}
           <figure style="background: url({{ image }})no-repeat;background-size: cover;; background-position: center center"></figure>
@@ -26,7 +26,7 @@
         </div>
         {{ /entries:listing }}
       </article>
-      {{ entries:pagination folder="novedades" limit="6" }}
+      {{ entries:pagination folder="ponencias" limit="6" }}
         {{ if next_page || previous_page }}
           <div class="pagination">
             <div class="pag-list">
